# libhal-cmake-util

./: .gitignore  CMakeLists.txt  MODIFICATIONS  README.md  conanfile.py
.github/workflows/: deploy.yml
cmake/: LibhalBuildConfig.cmake  build.cmake  build_outputs.cmake  colors.cmake  optimize_debug_build.cmake
cmake/deprecated/: colors.cmake
examples/: strong_ptr_CMakeLists.txt
files/libhal-cmake-helpers/: LICENSE  MIGRATION.md  PACKAGE_SUMMARY.md  README.md  conanfile.py
v4/: README.md  conanfile.py
v4/cmake/: build.cmake
v5/: CMakeLists.txt  conanfile.py
v5/cmake/: LibhalBinUtils.cmake  LibhalCMakeUtilConfig.cmake  LibhalClangTidy.cmake  LibhalCompileOptions.cmake  LibhalExecutable.cmake  LibhalLibrary.cmake  LibhalTesting.cmake
v5/examples/: demos_CMakeLists.txt  libhal-actuator_CMakeLists.txt  strong_ptr_CMakeLists.txt
